--- a/metabolights-webservice/src/main/resources/email_template/htmlemail.vm
+++ b/metabolights-webservice/src/main/resources/email_template/htmlemail.vm
@@ -6,7 +6,7 @@ ${body}
 </P>
 </P>
 Kind Regards, <br>
-<h3><img src="http://www.ebi.ac.uk/metabolights/img/MetaboLightsLogo.png"> The MetaboLights Team</h3>
+<h3>The MetaboLights Team</h3>
 <div style="color:white">
     ${technicalInfo}
 </div>
