- Added ws method to get all private (Submitted) studies for a user - Added ws method to get the study upload queue folder - Fixed all email replies, no logo now

--- a/metabolights-webservice/src/main/resources/email_template/validationsEmail.vm
+++ b/metabolights-webservice/src/main/resources/email_template/validationsEmail.vm
@@ -17,7 +17,7 @@
 </P>
 </P>
 Kind Regards, <br>
-<h3><img src="http://www.ebi.ac.uk/metabolights/img/MetaboLightsLogo.png"> The MetaboLights Team</h3>
+<h3>The MetaboLights Team</h3>
 
 <hr style="border: 1px dashed grey;" />
 <div style="color:grey">
