--- a/metabolights-webapps/src/main/webapp/css/ml.css
+++ b/metabolights-webapps/src/main/webapp/css/ml.css
@@ -604,6 +604,21 @@ a.more:after, a.read-more:after, a.readmore:after {
     letter-spacing: 1px;
 }
 
+.nbtr{
+    border-top-left-radius: 0px;
+     border-top-right-radius: 0px;
+}
+
+.vh50{
+    min-height: 50px !important;
+}
+
+.vc{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .section-text{
     font-weight: 400;
     margin-top: 0;
@@ -648,10 +663,6 @@ a.more:after, a.read-more:after, a.readmore:after {
     background-color: #f5f5f7;
     padding: 10px 20px;
     border-bottom: 1px solid #e6e6e6;
-}
-
-.capitalize{
-    text-transform: capitalize;
 }
 
 .filterset{
@@ -706,7 +717,7 @@ ol.progtrckr li {
 
 ol.progtrckr[data-progtrckr-steps="2"] li { width: 49%; }
 ol.progtrckr[data-progtrckr-steps="3"] li { width: 33%; }
-ol.progtrckr[data-progtrckr-steps="4"] li { width: 25%; }
+ol.progtrckr[data-progtrckr-steps="4"] li { width: 24.74%; }
 ol.progtrckr[data-progtrckr-steps="5"] li { width: 19%; }
 ol.progtrckr[data-progtrckr-steps="6"] li { width: 16%; }
 ol.progtrckr[data-progtrckr-steps="7"] li { width: 14%; }
