--- a/metabolights-webapps/src/main/webapp/css/ml.css
+++ b/metabolights-webapps/src/main/webapp/css/ml.css
@@ -715,14 +715,14 @@ ol.progtrckr li {
     line-height: 3em;
 }
 
-ol.progtrckr[data-progtrckr-steps="2"] li { width: 49%; }
-ol.progtrckr[data-progtrckr-steps="3"] li { width: 33%; }
-ol.progtrckr[data-progtrckr-steps="4"] li { width: 24.74%; }
-ol.progtrckr[data-progtrckr-steps="5"] li { width: 19%; }
-ol.progtrckr[data-progtrckr-steps="6"] li { width: 16%; }
-ol.progtrckr[data-progtrckr-steps="7"] li { width: 14%; }
-ol.progtrckr[data-progtrckr-steps="8"] li { width: 12%; }
-ol.progtrckr[data-progtrckr-steps="9"] li { width: 11%; }
+/*ol.progtrckr[data-progtrckr-steps="2"] li { width: 49%; }*/
+/*ol.progtrckr[data-progtrckr-steps="3"] li { width: 33%; }*/
+/*ol.progtrckr[data-progtrckr-steps="4"] li { width: inherit; }*/
+/*ol.progtrckr[data-progtrckr-steps="5"] li { width: 19%; }*/
+/*ol.progtrckr[data-progtrckr-steps="6"] li { width: 16%; }*/
+/*ol.progtrckr[data-progtrckr-steps="7"] li { width: 14%; }*/
+/*ol.progtrckr[data-progtrckr-steps="8"] li { width: 12%; }*/
+/*ol.progtrckr[data-progtrckr-steps="9"] li { width: 11%; }*/
 
 ol.progtrckr li.progtrckr-done {
     color: black;
