- Small tweak to the email we send when a new study is submitted

--- a/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
+++ b/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
@@ -12,8 +12,7 @@ D. The curation team approves the study and moves the study status from In Curat
 E. Your public release date is reached.
 
 For private pre-publication access to your study, please see the "Share study" link at the top of the study page.
-Please note that the pre-publication link is only accessible when the study is in "In Review" status”.
-
+Please note that the pre-publication link is only accessible when the study is in "In Review" status".
 
 Citing your submission in MetaboLights:
 
