Fixing the invalid character bug - METLIGHT-2086

--- a/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
+++ b/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
@@ -21,7 +21,7 @@ The complete dataset can be accessed here {3}{1}
 
 Citing MetaboLights generally:
 
-Kenneth Haug, Keeva Cochrane, Venkata Chandrasekhar Nainala, Mark Williams, Jiakang Chang, Kalai Vanii Jayaseelan, Claire O’Donovan
+Kenneth Haug, Keeva Cochrane, Venkata Chandrasekhar Nainala, Mark Williams, Jiakang Chang, Kalai Vanii Jayaseelan, Claire O'Donovan
 MetaboLights: a resource evolving in response to the needs of its scientific community.
 Nucleic Acids Research, gkz1019, doi:10.1093/nar/gkz1019, PMID:31691833.
 
