--- a/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
+++ b/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
@@ -16,14 +16,15 @@ Please note that the pre-publication link is only accessible when the study is i
 
 Citing your submission in MetaboLights:
 
-Metabolomics data have been deposited to the EMBL-EBI MetaboLights database (DOI: 10.1093/nar/gkz1019, PMID:31691833) with the identifier {1}.
+Metabolomics data have been deposited to the EMBL-EBI MetaboLights database (DOI: doi:10.1093/nar/gkad1045) with the identifier {1}.
 The complete dataset can be accessed here {3}{1}
 
 Citing MetaboLights generally:
 
-Kenneth Haug, Keeva Cochrane, Venkata Chandrasekhar Nainala, Mark Williams, Jiakang Chang, Kalai Vanii Jayaseelan, Claire O'Donovan
-MetaboLights: a resource evolving in response to the needs of its scientific community.
-Nucleic Acids Research, gkz1019, doi:10.1093/nar/gkz1019, PMID:31691833.
+Ozgur Yurekten, Thomas Payne, Noemi Tejera, Felix Xavier Amaladoss, Callum Martin, Mark Williams, Claire O’Donovan,
+MetaboLights: open data repository for metabolomics,
+Nucleic Acids Research, 2023;, gkad1045, https://doi.org/10.1093/nar/gkad1045
+.
 
 
 Many thanks for your time and effort.
