--- a/metabolights-webapps/src/main/webapp/css/advSearchFix.css
+++ b/metabolights-webapps/src/main/webapp/css/advSearchFix.css
@@ -1,12 +1,13 @@
 
 
 .navbar {
+    min-height: 35px !important;
     max-height: 40px;
-    margin-bottom: 0px;
-    border: 0px ! important;
+    margin-bottom: 0;
+    border: 0 !important;
 }
 
 .navbar-nav>li>a {
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
 }
