--- a/metabolights-webapps/src/main/webapp/css/ml.css
+++ b/metabolights-webapps/src/main/webapp/css/ml.css
@@ -195,7 +195,7 @@ a span.link-pdf {
 }
 
 .metabolights-logo-orange {
-    color: #f3b300;
+    color: #cc3f03;
     font-size: 2.6em;
     font-weight: 400;
     margin-top: 10px;
